# open-trader

./: .gitignore  .licensecheck-ignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REQUIREMENTS.md
.github/workflows/: requirements-gate.yml  validate.yml
ci/: gate.sh  report_build_failure.py  write_status_summary.py
cmake/: SkiaBuild.cmake  ThorvgBuild.cmake  ThorvgConfigure.cmake
db/: config
req/: README.md  refactor_plan_2026-07-20.md
req/data/: CONNECT-001.yml  CONNECT-010.yml  CONNECT-011.yml  CONNECT-012.yml  CONNECT-013.yml  CONNECT-014.yml  CONNECT-020.yml  CONNECT-021.yml  DATAHUB-001.yml  DATAHUB-010.yml  DATAHUB-011.yml  DATAHUB-012.yml  DATAHUB-013.yml  DATAHUB-014.yml  DATAHUB-015.yml  DATAHUB-016.yml  DATAHUB-017.yml  DATAHUB-020.yml  DATAHUB-021.yml  DATAHUB-022.yml  DATAHUB-030.yml  DATAHUB-031.yml  DATAHUB-032.yml  DATAHUB-033.yml  DATAHUB-034.yml  DATAHUB-035.yml  DATAHUB-040.yml  DATAHUB-041.yml  DATAHUB-042.yml  DATAHUB-043.yml  DATAHUB-044.yml  DATAHUB-045.yml  DATAHUB-050.yml  DATAHUB-051.yml  DATAHUB-052.yml  DATAHUB-053.yml  DATAHUB-054.yml  DATAHUB-055.yml  DATAHUB-056.yml
req/infra/: .doorstop.yml  INFRA-030.yml  INFRA-031.yml  INFRA-032.yml  INFRA-033.yml  INFRA-041.yml  INFRA-042.yml  INFRA-043.yml  INFRA-044.yml  INFRA-045.yml  INFRA-046.yml  INFRA-047.yml  INFRA-049.yml  INFRA-050.yml  INFRA-051.yml  INFRA-064.yml  INFRA-065.yml  INFRA-066.yml  INFRA-067.yml  INFRA-068.yml
req/product/: .doorstop.yml  OPEN-TRADER.yml  PRODUCT-001.yml  PRODUCT-032.yml  PRODUCT-082.yml  PRODUCT-135.yml  PRODUCT-168.yml  PRODUCT-169.yml
scripts/: build_agent.py  check_frozen_tests.py  check_license.py  check_req_coverage.py  check_self_approval.py  import_requirements.py  migrate_doorstop.py  publish_check_run.py  render_req_report.py  req.py  req_status.py  reqlib.py
scripts/tests/: conftest.py  test_check_req_coverage.py  test_doorstop_tree_shape.py  test_infra_049_freeze_workflow.py  test_infra_050_suspect_block.py  test_infra_051_auto_tests.py  test_infra_066_ci_on_push.py  test_infra_067_ci_tests.py  test_infra_068_ci_status_report.py  test_publish_check_run.py  test_render_req_report.py  test_req_status.py  test_tree_shape.py  test_workflow_lint.py  workflow_doc.py
src/: config.cpp  config.hpp  elscratcher_main.cpp  main.cpp
src/app/: README.md  instrument_panel_element.cpp  instrument_panel_element.hpp  main_window.cpp  main_window.hpp  panel_node.cpp  panel_node.hpp  split_direction.hpp  tab_bar.cpp  tab_bar.hpp  ui_builder.cpp  ui_builder.hpp
src/app/elements/: elements_instrument_panel.cpp  elements_instrument_panel.hpp  instrument_panel_element.cpp  instrument_panel_element.hpp  main_window.cpp  main_window.hpp  panel_node.cpp  panel_node.hpp  pixel_buffer_element.cpp  pixel_buffer_element.hpp  tab_bar.cpp  tab_bar.hpp  ui_builder.cpp  ui_builder.hpp
src/cockpit/: README.md  content_panel.cpp  content_panel.hpp  instrument_panel.cpp  instrument_panel.hpp  pixel_rect.hpp  scratcher.hpp  trade_cockpit.cpp  trade_cockpit.hpp  trade_cockpit_config.hpp  tvg_ptr.hpp
src/cockpit/scratchers/: README.md  price_indicator.cpp  price_indicator.hpp  price_ruler.cpp  price_ruler.hpp  quote_scratcher.cpp  quote_scratcher.hpp  time_ruler.cpp  time_ruler.hpp
src/common/: config_helper.hpp  data_rectangle.hpp  generic_handler.hpp  hex.cpp  hex.hpp  timedef.hpp
src/connect/: connection_context.cpp  connection_context.hpp  connection_errors.hpp  http_query.cpp  http_query.hpp  websocket.cpp  websocket.hpp
src/core/: generic_handler.hpp  scheduler.cpp  scheduler.hpp
src/data/: buoy_candle.cpp  buoy_candle.hpp  currency.hpp  data_controller.hpp  orderbook.hpp
src/data/bybit/: bybit_config.hpp  data_manager.cpp  data_manager.hpp
src/data/bybit/entities/: enums.hpp  fee_rate.hpp  instrument.hpp  order.hpp  orderbookdata.hpp  public_trade.hpp  response.hpp  trade.hpp  wallet.hpp
src/data/entities/: common.cpp  common.hpp  instrument.hpp  iso_time.hpp  orderbook_level.hpp  trade.hpp
src/datahub/: README.md  data_condition.hpp  data_feed.hpp  data_model.hpp  data_sink.hpp  data_subscription.hpp  data_update.hpp  metadata.hpp  operations.hpp  query_builder.hpp
test/: req_coverage_listener.cpp
test/bybit/: test_data_manager.cpp  test_data_model.cpp  test_orderbook.cpp
test/cockpit/scratchers/: test_quote_scratcher.cpp
test/connect/: test_http_query.cpp  test_websocket.cpp  tls_test_server.hpp
test/core/: test_buoy_candle.cpp
test/data/: test_currency.cpp  test_orderbook.cpp
test/datahub/: test_dao.cpp  test_data_sandbox.cpp  test_data_sink.cpp  test_keyed_snapshot_data_feed.cpp  test_sorted_data_feed.cpp  test_sorted_snapshot_data_feed.cpp
test/render/: test_thorvg.cpp  test_time_ruler.cpp
